--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -24,10 +24,18 @@ html, body {
     margin: auto;
 }
 
+#wpia-toolbar{
+    display: flex ;
+    justify-content: space-between;
+}
+
 ul.buttons {
     list-style: none;
     margin: 0 0 10px 0;
     padding: 0;
+    display: flex ;
+    align-items: center ;
+    gap: 4px;
 }
 
 ul.buttons li {
@@ -54,6 +62,7 @@ ul.buttons li:hover, ul.buttons:hover {
     width: 100%;
     background: transparent;
     position: relative;
+    /* border : 2px solid ; */
 }
 
 #canvas-area img {
@@ -103,3 +112,68 @@ ul.buttons li.remove-button {
     flex-direction: column;
     gap: 10px;
   }
+
+  #popup img{
+    width: 50% ;
+    height: 50vh ;
+    object-fit: contain;
+  }
+
+  #imp{
+      color: red;
+  }
+
+  .icon-button{
+    font-size: 20px ;
+    font-weight: 600 ;
+  }
+
+  .buttons{
+    position: relative;
+  }
+
+  .download-div{
+    padding: 10px;
+    position: absolute;
+    top: 60px;
+    width: 180px ;
+    /* left: 10px; */
+    background-color: white ;
+    border-radius: 6px ;
+    display: flex;
+    flex-direction: column ;
+    justify-content: center;
+    align-items: center ;
+    gap: 10px ;
+    border: 1px solid rgba(128, 128, 128, 0.338) ;
+    box-shadow: 0px 0px 2px rgba(172, 172, 172, 0.664) ;
+    display: none ;
+    flex-wrap: wrap;
+  }
+
+  .download-div button{
+    width: 100% ;
+    background-color: #0084ff;
+    color: white ;
+    border-radius: 4px ;
+    padding: 8px;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+  .download-div button:hover{
+    background-color: #ffa2ba;
+  }
+
+  .show{
+    display: flex;
+  }
+
+  /* .icon-wrapper{
+    margin-top: 20px;
+    border : 2px solid red ;
+    min-height: fit-content;
+    height: 30px !important;
+    padding: 10px;
+  } */
