--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -5,8 +5,15 @@
     font-family: 'annotatorFont';
 }*/
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 #upload-area {
     font-family: 'clearSansBold',sans-serif;
+}
+
+*{
+  font-family: "Inter", sans-serif !important;
 }
 
 html, body {
@@ -22,12 +29,15 @@ html, body {
 
 #work-area {
     margin: auto;
+    /* display: flex; */
+
 }
 
-#wpia-toolbar{
+/* #wpia-toolbar{
     display: flex ;
     justify-content: space-between;
-}
+} */
+
 
 ul.buttons {
     list-style: none;
@@ -35,23 +45,37 @@ ul.buttons {
     padding: 0;
     display: flex ;
     align-items: center ;
-    gap: 4px;
+    gap: 6px;
+    /* flex-direction: column; */
 }
 
 ul.buttons li {
-    display: inline-block;
-    color: #fff;
-    background: #0084ff;
+    /* display: inline-block; */
+    color: #909090;
+    border-radius: 20px ;
     margin-right: 5px;
-    padding: 10px;
+    padding: 10px ;
+    box-sizing: content-box;
     width: 20px;
     height: 20px;
     text-align: center;
+    transition: 0.3s ;
+    display: flex ;
+    justify-content: center;
+    align-items: center;
+}
+
+ul.buttons li:hover{
+    background-color: #efefef;
 }
 
 ul.buttons li.active {
     color: #fff;
-    background: #ffa2ba;
+    /* background: #ffa2ba; */
+    background:#19b394 ;
+    /* background: #f0f0f1 ; */
+    box-shadow: 2px 2px 10px rgba(206, 206, 206, 0.468) ;
+    /* color: #19b394; */
 }
 
 ul.buttons li:hover, ul.buttons:hover {
@@ -74,6 +98,7 @@ ul.buttons li:hover, ul.buttons:hover {
 
 #upload-area {
     margin-bottom: 25px;
+    margin-top: 15px ;
 }
 
 #image_annotation_json {
@@ -87,9 +112,6 @@ ul.buttons li:hover, ul.buttons:hover {
     display: none;
 }
 
-ul.buttons li.remove-button {
-    margin-right: 40px;
-}
 
 #raw-code textarea {
     height: 600px;
@@ -111,6 +133,7 @@ ul.buttons li.remove-button {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     flex-direction: column;
     gap: 10px;
+    z-index: 9999;
   }
 
   #popup img{
@@ -124,8 +147,75 @@ ul.buttons li.remove-button {
   }
 
   .icon-button{
-    font-size: 20px ;
-    font-weight: 600 ;
+    padding-top: 4px ;
+    /* font-size: 20px ;
+    font-weight: 600 ; */
+  }
+
+  .download-btn{
+    background-color: #19b394 !important;
+    color: white !important;
+    min-width: 100px !important;
+    font-size: 14px !important;
+    display: flex ;
+    gap: 4px !important ;
+    align-items: center;
+    justify-content: center ;
+    border-radius: 5px !important ;
+    /* padding: 8px 10px !important; */
+    padding: 6px 12px !important;
+  }
+
+    .imgLoader{
+      display: none ;
+    }
+
+    #fileImage{
+        background-color: #19b394 ;
+        color: white ;
+        padding: 6px 12px;
+        border-radius: 5px ;
+        /* border: 2px solid ; */
+        /* font-weight: bold ; */
+        font-size: 14px ;
+        min-width: 100px ;
+        display: flex ;
+        align-items: center;
+        gap: 4px;
+    }
+
+    #cropButton{
+      background-color: #19b394 ;
+      color: white ;
+      padding: 6px 12px;
+      border-radius: 5px ;
+      border: none ;
+      font-size: 14px ;
+      min-width: 100px ;
+      display: flex ;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+    }
+
+    #color{
+        margin-bottom: 10px ;
+    }
+
+    input[type="color"]{
+        border: none ;
+        appearance: none ;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+    }
+
+  #colorInput{
+    padding: 4px 12px;
+    border-radius: 4px ;
+    background-color: #fff ;
+    border: 2px solid #19b394;
+    color: #19b394;
+    font-weight: 600;
   }
 
   .buttons{
@@ -135,9 +225,7 @@ ul.buttons li.remove-button {
   .download-div{
     padding: 10px;
     position: absolute;
-    top: 60px;
     width: 180px ;
-    /* left: 10px; */
     background-color: white ;
     border-radius: 6px ;
     display: flex;
@@ -149,31 +237,143 @@ ul.buttons li.remove-button {
     box-shadow: 0px 0px 2px rgba(172, 172, 172, 0.664) ;
     display: none ;
     flex-wrap: wrap;
+    z-index: 999 ;
+    left: 150px;
+    top : 0;
   }
-
+  
   .download-div button{
     width: 100% ;
-    background-color: #0084ff;
+    background-color: #19b394;
     color: white ;
+    border: 2px solid #19b394;
     border-radius: 4px ;
     padding: 8px;
-    border: none;
     font-weight: 500;
     cursor: pointer;
   }
 
-  .download-div button:hover{
-    background-color: #ffa2ba;
+  .download-custom:hover{
+    background-color: #fff;
+    color: #19b394;
+    border:2px solid #19b394 ;
   }
 
-  .show{
-    display: flex;
+  .show{ display: flex; }
+
+  .disabled{
+    opacity: 0.4 !important;
+    cursor: not-allowed !important;
   }
 
-  /* .icon-wrapper{
-    margin-top: 20px;
-    border : 2px solid red ;
-    min-height: fit-content;
-    height: 30px !important;
-    padding: 10px;
+  .buttons-side{
+    display: flex ;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    width: 45px;
+    gap: 6px ;
+  }
+  
+  /* .buttons-side li{
+    font-size: 22px !important;
   } */
+
+  .top-bar{
+    display: flex ;
+    justify-content: space-between ;
+  }
+
+  .bottom-div{
+    display: flex ;
+    gap: 30px;
+  }
+
+  .tool-button {
+    position: relative;
+    font-size: 16px ;
+    padding: 0;
+  }
+  
+  .tool-button:hover::before {
+    content: attr(data-title);
+    position: absolute;
+    background-color: #333;
+    color: white ;
+    text-align: left;
+    padding: 5px 10px;
+    border-radius: 5px ;
+    font-size: 12px;
+    white-space: nowrap;
+    left: 100%;
+    transition: 0.2s ;
+    animation-name: bounce ;
+    animation-duration: 300ms ;
+    animation-direction: alternate;
+    transition: 0.2s linear ;
+    transform: translateY( 0px) ;
+    z-index: 10;
+  }
+
+  .top-bar li:hover::before{
+    content: attr(data-title);
+    position: absolute;
+    background-color: #333;
+    color: white ;
+    text-align: left;
+    padding: 5px 10px;
+    border-radius: 5px ;
+    font-size: 12px;
+    white-space: nowrap;
+    left: 10%;
+    bottom: 110%;
+    transition: 0.2s ;
+    animation-name: slide ;
+    animation-duration: 300ms ;
+    animation-direction: alternate;
+    transition: 0.2s linear ;
+    transform: translateX( 0px) ;
+  }
+
+  @keyframes bounce {
+      from { transform: translateY(-5px);  }
+      to { transform: translateY(0px );}
+  }
+
+  @keyframes slide {
+    from { transform: translateX(5px);  }
+    to { transform: translateX(0px );}
+  }
+
+  .insert-an-image{
+    height: 400px;
+    width: 600px;
+    background-color: transparent;
+    color: rgb(182, 182, 182);
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    align-items: center ;
+    font-weight: bold ;
+    position: relative;
+    /* left: 40px ; */
+    z-index: 5 ;
+  }
+
+  .insert-an-image h1{
+    color: rgb(182, 182, 182);
+    font-weight: 500 ;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
+  }
+
+  .upload-bar{
+    display: flex ;
+    width: 100%;
+    justify-content: space-between;
+    align-items: start;
+  }
+
+  .upload-bar ul , li{
+    margin: 0;
+  }
