Fixed UI Component

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -51,7 +51,7 @@ ul.buttons {
   margin: 0 0 10px 0;
   padding: 0;
   display: flex ;
-  align-items: center ;
+  align-items: start ;
   gap: 6px;
 }
 
@@ -180,6 +180,10 @@ ul.buttons li:hover, ul.buttons:hover {
       display: none ;
     }
 
+    #upload_image_button{
+      margin: 0 !important;
+    }
+
     #fileImage , .ia-upload_image_button , #pasteImage{
         background-color: #19b394 ;
         color: white ;
@@ -193,10 +197,16 @@ ul.buttons li:hover, ul.buttons:hover {
         display: flex ;
         justify-content: center;
         align-items: center;
+        max-height: fit-content !important ;
       }
       
-      #fileImage{
+    #fileImage{
       gap: 8px;
+    }
+
+
+    #ia-upload-image-button , #fileImage{
+      max-height: 20px !important;
     }
 
     #cropButton{
@@ -394,6 +404,7 @@ ul.buttons li:hover, ul.buttons:hover {
   .ia-upload-bar{
     display: flex ;
     width: 100%;
+    height: 28px !important;
     justify-content: space-between;
     align-items: start;
   }
