--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -184,25 +184,35 @@ ul.buttons li:hover, ul.buttons:hover {
       margin: 0 !important;
     }
 
-    #fileImage , .ia-upload_image_button , #pasteImage{
+    /* #fileImage , .ia-upload_image_button , #pasteImage , #clearBtn{ */
+      .ia-btn-primary{
         background-color: #19b394 ;
         color: white ;
         padding: 6px 12px;
         border-radius: 5px ;
         border: none ;
-        /* border: 2px solid ; */
-        /* font-weight: bold ; */
         font-size: 14px ;
         min-width: 100px ;
         display: flex ;
         justify-content: center;
         align-items: center;
         max-height: fit-content !important ;
+        gap: 8px ;
+        cursor: pointer;
+      }
+
+      #clearBtn:hover{
+        background-color: #FF004F;
+        color: white;
+      }
+
+      .ia-btn-primary:hover{
+        background-color: #18a589;
       }
       
-    #fileImage{
+    /* #fileImage{
       gap: 8px;
-    }
+    } */
 
 
     #ia-upload-image-button , #fileImage{
